--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,6 @@
   <app-header></app-header>
   <app-navbar></app-navbar>
   <app-sidemenu></app-sidemenu>
+  
+    <router-outlet></router-outlet>
+ 
