--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
-body {
-    font-family: 'Lato', sans-serif;
+/*You can add global styles to this file, and also import other style files */
+ body {
+    font-family: 'Nunito', sans-serif;
 }
