--- a/src/app/components/pages/clothing/clothing.component.html
+++ b/src/app/components/pages/clothing/clothing.component.html
@@ -40,4 +40,102 @@
        <h1>WOMEN</h1>
   </div>
 </div>
+<div class="offer">
+  <div class="top">
+    <p>Special offer</p>
+    <h1>Top Collection</h1>
+    <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.!</span>
+    <span> Error, voluptates molestias. Sint, iusto voluptatum vero </span>
+  </div>
+</div>
+  <div class="items">
+@for (item of list; track list) {
+     <div class="item-c">
+      <div class="all">
+       <div class="m-img">
+       <img src="{{item.mainimg}}" alt="main" width="295px" height="350px">
+       <div class="icon-container">
+        <fa-icon [icon]="cart"></fa-icon>
+        <fa-icon [icon]="search"></fa-icon>
+        <fa-icon [icon]="heart"></fa-icon>
+        <fa-icon [icon]="compare"></fa-icon>
+       </div>
+       </div>
+       
+       <div class="s-img">
+        @for (img of item.secimg; track img) {
+        <img src="{{img.src}}" alt="{{img.alt}}" height="60px"  (mouseover)="changeMainImage(item, img.src)">
+        }
+       </div>
+       
+    </div>
+       <div class="price">
+          <div class="star">
+          <fa-icon [icon]="star"></fa-icon>
+          <fa-icon [icon]="star"></fa-icon>
+          <fa-icon [icon]="star"></fa-icon>
+          <fa-icon [icon]="star"></fa-icon>
+          <fa-icon [icon]="star"></fa-icon>
+        </div>
+        <div class="info">
+        <p>{{item.title}}</p>
+        <p>{{item.price}}</p>
+      </div>
+        
+       </div>
+     </div>
+    }
+  </div>
+  <div class="b-container">
+    <div class="background-image"></div>
+    <div class="text-container">
+      <h3>2018</h3>
+      <h1>Fashion Trend</h1>
+      <h2>Special Offer</h2>
+    </div>
+  </div>
+  <div class="offer">
+    <div class="top">
+      <p>Exclusive Product</p>
+      <h1>Special Product</h1>
+    </div>
+  </div>
+ <div class="nav">
+  <a routerLink="/clothing/newproduct">NEW PRODUCTS</a>
+  <a routerLink="/clothing/bestseller">BEST SELLERS</a>
+  <a routerLink="/clothing/featured">FEATURED PRODUCTS</a>
+  <a routerLink="/clothing/sale">ON SALE</a>
+ </div>
+ <div class="change">
+  <router-outlet></router-outlet>
+ </div>
+ <div class="information">
+    <div class="ship">
+      <fa-icon [icon]="truck" class="fa-4x"></fa-icon>
+      <div class="free">
+        <h5>FREE SHIPPING</h5>
+        <p>Free Shippng World Wide</p>
+      </div>
+    </div>
+    <div class="ship">
+      <fa-icon [icon]="clock" class="fa-4x"></fa-icon>
+      <div class="free">
+        <h5>24 X 7 Service</h5>
+        <p>Online Service for New Customer</p>
+      </div>
+    </div>
+    <div class="ship2">
+      <fa-icon [icon]="horn" class="fa-4x"></fa-icon>
+      <div class="free">
+        <h5>Festival Offer</h5>
+        <p>New Online Special Festival Offer</p>
+      </div>
+    </div>
+ </div>
+ <div class="offer">
+  <div class="top">
+    <p>Recent Story</p>
+    <h1>From The Blog </h1>
+  </div>
+</div>
 </div>
