--- a/src/app/components/sidemenu/sidemenu.component.css
+++ b/src/app/components/sidemenu/sidemenu.component.css
@@ -5,13 +5,14 @@
     top: 0%;
     left: 0%;
     background-color: white;
-    z-index: 1;
+    z-index: 1100;
 }
 .back{
     height: 80px;
     width: 100%;
     background-color: white;
     border-bottom: 1px solid gray;
+    /* z-index: 1000; */
 }
 .back button{
     height: 70px;
