--- a/src/app/components/pages/clothing/clothing.component.html
+++ b/src/app/components/pages/clothing/clothing.component.html
@@ -101,10 +101,10 @@
     </div>
   </div>
  <div class="nav">
-  <a routerLink="/clothing/newproduct">NEW PRODUCTS</a>
-  <a routerLink="/clothing/bestseller">BEST SELLERS</a>
-  <a routerLink="/clothing/featured">FEATURED PRODUCTS</a>
-  <a routerLink="/clothing/sale">ON SALE</a>
+  <a routerLink="/clothing/newproduct" routerLinkActive="active">NEW PRODUCTS</a>
+  <a routerLink="/clothing/bestseller" routerLinkActive="active">BEST SELLERS</a>
+  <a routerLink="/clothing/featured" routerLinkActive="active">FEATURED PRODUCTS</a>
+  <a routerLink="/clothing/sale" routerLinkActive="active">ON SALE</a>
  </div>
  <div class="change">
   <router-outlet></router-outlet>
@@ -137,5 +137,38 @@
     <p>Recent Story</p>
     <h1>From The Blog </h1>
   </div>
+</div>
+<div class="blogs">
+  <div class="card">
+    <img src="assets/b1.jpg" alt="img">
+    <div class="data">
+      <h5>25 January 2018</h5>
+      <h4>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h4>
+      <p>by john Dio, 2 comments</p>
+    </div>
+  </div>
+  <div class="card">
+    <img src="assets/b2.jpg" alt="img">
+    <div class="data">
+      <h5>26 January 2018</h5>
+      <h4>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h4>
+      <p>by john Dio, 2 comments</p>
+    </div>
+  </div>
+  <div class="card">
+    <img src="assets/b3.jpg" alt="img">
+    <div class="data">
+      <h5>27 January 2018</h5>
+      <h4>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h4>
+      <p>by john Dio, 2 comments</p>
+    </div>
+  </div>
+</div>
+<div class="logo">
+  <img src="assets/logo1.png" alt="logo">
+  <img src="assets/logo2.png" alt="logo">
+  <img src="assets/logo3.png" alt="logo">
+  <img src="assets/logo4.png" alt="logo">
+  <img src="assets/logo5.png" alt="logo">
 </div>
 </div>
