--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -20,8 +20,8 @@
                     <fa-icon [icon]="user"></fa-icon> My Account
                 </a>
                 <div class="log">
-                    <a href="">LogIn</a>
-                    <a href="">LogOut</a>
+                    <a routerLink="/login">LogIn</a>
+                    <a routerLink="/login">LogOut</a>
                 </div>
               </div>
             
