--- a/src/app/components/pages/login/login.component.css
+++ b/src/app/components/pages/login/login.component.css
@@ -33,7 +33,7 @@
     margin-left: 30px;
 }
 .form button{
-    background-color: palevioletred;
+    background-color: orangered;
   border: none;
   color: white;
   padding: 9px 20px;
