--- a/src/app/components/pages/vegetables/vegetables.component.html
+++ b/src/app/components/pages/vegetables/vegetables.component.html
@@ -105,4 +105,142 @@
         <h1>SPECIAL PRODUCTS</h1>
         <div class="line"></div>
     </div>
+    <div class="five">
+      <div class="first">
+        <div class="bee" style="border-bottom: 0.5px solid gray;">
+          <img src="assets/v1.jpg" alt="betroot" height="290px">
+          <div class="price2">
+            <div class="star">
+            <fa-icon [icon]="star"></fa-icon>
+            <fa-icon [icon]="star"></fa-icon>
+            <fa-icon [icon]="star"></fa-icon>
+            <fa-icon [icon]="star"></fa-icon>
+            <fa-icon [icon]="star"></fa-icon>
+          </div>
+          <div class="info">
+          <p>Beetroot</p>
+          <p>$31.50</p>
+        </div>
+          
+         </div>
+        </div>
+        <div class="bee">
+          <img src="assets/v2.jpg" alt="betroot" height="290px">
+          <div class="price2">
+            <div class="star">
+            <fa-icon [icon]="star"></fa-icon>
+            <fa-icon [icon]="star"></fa-icon>
+            <fa-icon [icon]="star"></fa-icon>
+            <fa-icon [icon]="star"></fa-icon>
+            <fa-icon [icon]="star"></fa-icon>
+          </div>
+          <div class="info">
+          <p>Cabbage</p>
+          <p>$20.00</p>
+        </div>
+          
+         </div>
+        </div>
+      </div>
+      <div class="first" style="border-left: 0.5px solid gray;border-right: 0.5px solid gray;">
+      <div class="cabbage">
+        
+          <div class="all">
+           <div class="m-img">
+           <img src="assets/v2.jpg" alt="main" width="400px" height="350px">
+           <div class="icon-container">
+            <fa-icon [icon]="cart"></fa-icon>
+            <fa-icon [icon]="search"></fa-icon>
+            <fa-icon [icon]="heart"></fa-icon>
+            <fa-icon [icon]="compare"></fa-icon>
+           </div>
+           </div>
+           
+          
+           
+        </div>
+           <div class="price3">
+              <div class="star">
+              <fa-icon [icon]="star"></fa-icon>
+              <fa-icon [icon]="star"></fa-icon>
+              <fa-icon [icon]="star"></fa-icon>
+              <fa-icon [icon]="star"></fa-icon>
+              <fa-icon [icon]="star"></fa-icon>
+            </div>
+            <div class="info">
+            <p>Cabbage</p>
+            <p>$20.00</p>
+          </div>
+            
+           </div>
+         
+      </div>
+      </div>
+      <div class="first">
+        <div class="bee" style="border-bottom: 0.5px solid gray;">
+          <img src="assets/v3.jpg" alt="betroot" height="290px">
+          <div class="price2">
+            <div class="star">
+            <fa-icon [icon]="star"></fa-icon>
+            <fa-icon [icon]="star"></fa-icon>
+            <fa-icon [icon]="star"></fa-icon>
+            <fa-icon [icon]="star"></fa-icon>
+            <fa-icon [icon]="star"></fa-icon>
+          </div>
+          <div class="info">
+          <p>Onion</p>
+          <p>$27.55</p>
+        </div>
+          
+         </div>
+        </div>
+        <div class="bee">
+          <img src="assets/v4.jpg" alt="betroot" height="290px">
+          <div class="price2">
+            <div class="star">
+            <fa-icon [icon]="star"></fa-icon>
+            <fa-icon [icon]="star"></fa-icon>
+            <fa-icon [icon]="star"></fa-icon>
+            <fa-icon [icon]="star"></fa-icon>
+            <fa-icon [icon]="star"></fa-icon>
+          </div>
+          <div class="info">
+          <p>Brinjal</p>
+          <p>$19.60</p>
+        </div>
+          
+         </div>
+        </div>
+      </div>
+    </div>
+    <div class="heading">
+      <h1>FROM THE BLOG</h1>
+      <div class="line"></div>
+  </div>
+  <div class="blogs">
+    <div class="card">
+      <img src="assets/b4.jpg" alt="img">
+      <div class="data">
+        <h5>25 January 2018</h5>
+        <h4>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h4>
+        <p>by john Dio, 2 comments</p>
+      </div>
+    </div>
+    <div class="card">
+      <img src="assets/b5.jpg" alt="img">
+      <div class="data">
+        <h5>26 January 2018</h5>
+        <h4>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h4>
+        <p>by john Dio, 2 comments</p>
+      </div>
+    </div>
+    <div class="card">
+      <img src="assets/b6.jpg" alt="img">
+      <div class="data">
+        <h5>27 January 2018</h5>
+        <h4>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h4>
+        <p>by john Dio, 2 comments</p>
+      </div>
+    </div>
+  </div>
  </div>
