--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -49,7 +49,7 @@
     justify-content: space-evenly;
 }
 .item:hover{
-    color: palevioletred;
+    color: orangered;
 }
 .hidden{
     position:absolute;
@@ -169,8 +169,8 @@
     display: block;
 }
 a:hover{
-    color: palevioletred;
+    color: orangered;
 }
 .Hidden a:hover{
-    color: palevioletred;
+    color: orangered;
 }
