--- a/src/app/components/pages/clothing/clothing.component.css
+++ b/src/app/components/pages/clothing/clothing.component.css
@@ -92,7 +92,7 @@
     justify-content: center;
 }
 .top p{
-    color: palevioletred;
+    color: orangered;
     font-size: 30px;
 }
 .top h1{
@@ -163,7 +163,7 @@
     margin-right: 5px;
 }
 .icon-container fa-icon:hover{
-    color: palevioletred;
+    color: orangered;
 }
 .m-img:hover .icon-container{
     opacity: 1;
@@ -198,7 +198,7 @@
     margin-left: 190px;
     font-size: 80px;
     font-weight: bold;
-    color: palevioletred;
+    color: orangered;
   }
   .text-container h1{
     font-size: 90px;
@@ -220,7 +220,7 @@
 
   }
 .nav a:hover{
-    color: palevioletred;
+    color: orangered;
 }
 .information{
     height: 200px;
@@ -238,17 +238,17 @@
     background-color: white;
     margin-left: 20px;
     margin-top: 20px;
-    color: palevioletred;
+    color: orangered;
     display: flex;
     border-right: 0.5px solid grey;
 }
 .ship:hover h5{
     cursor: pointer;
-    color: palevioletred;
+    color: orangered;
 }
 .ship2:hover h5{
     cursor: pointer;
-    color: palevioletred;
+    color: orangered;
 }
 .ship fa-icon{
     margin-top: 20px;
@@ -266,7 +266,7 @@
     background-color: white;
     margin-left: 20px;
     margin-top: 20px;
-    color: palevioletred;
+    color: orangered;
     display: flex;
 }
 .ship2 fa-icon{
@@ -294,14 +294,14 @@
     align-items: center;
 }
 .data h5{
-    color: palevioletred;
+    color: orangered;
     
 }
 .data h4{
     cursor: pointer;
 }
 .data h4:hover{
-    color: palevioletred;
+    color: orangered;
 }
 .data p{
     opacity: 0.5;
@@ -332,5 +332,5 @@
     cursor: pointer;
 }
 .active{
-    color: palevioletred;
+    color: orangered;
 }
