--- a/src/app/components/pages/furniture/furniture.component.css
+++ b/src/app/components/pages/furniture/furniture.component.css
@@ -28,3 +28,144 @@
     transform: scale(1.1); /* Add a subtle scaling effect */
   transition: all 0.3s ease-in-out;
 }
+.banners{
+  height: 200px;
+  width: 100%;
+  /* background-color: aqua; */
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.banner{
+  margin-left: 20px;
+}
+ .txt{
+  position: absolute;
+  color: black;
+   top: 110%; 
+  margin-left: 160px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end;
+
+}
+.txt h5{
+  color: orangered;
+} 
+.heading{
+  width: 100%;
+  margin-top: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.line{
+  height: 5px;
+  width: 250px;
+  background-color: orangered;
+  margin-left: 40px;
+}
+.heading h3{
+  color: orangered;
+  margin-top: 80px;
+}
+.nav{
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-top: 40px;
+}
+.nav a{
+  text-decoration: none;
+  color: black;
+  font-size: 20px;
+
+}
+.nav a:hover{
+  color: orangered;
+}
+.b-container {
+  position: relative;
+   height: 500px;
+   width: 100%;
+}
+
+.background-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("/assets/5.jpg"); /* Replace with your image path */
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+}
+
+.text-container {
+  position: absolute;
+  padding: 20px;
+  color: black; 
+  margin-top: 100px;
+  margin-left: 40px;
+}
+.text-container h3{
+  margin-left: 280px;
+  font-size: 80px;
+  font-weight: bold;
+  color: orangered;
+}
+.text-container h1{
+  font-size: 70px;
+}
+.text-container h2{
+  font-size: 40px;
+  margin-left: 280px;
+}
+.blogs{
+  height: 400px;
+  width: 80%;
+  /* background-color: aqua; */
+  margin-left: 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.card{
+  height: 350px;
+  width:30%;
+  margin: 20px;
+}
+.data{
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.data h5{
+  color: orangered;
+  
+}
+.data h4{
+  cursor: pointer;
+}
+.data h4:hover{
+  color: orangered;
+}
+.data p{
+  opacity: 0.5;
+  font-weight: bold;
+}
+.card img{
+  opacity: 0.7; 
+transition: opacity 0.5s ease-in-out;
+}
+.card img:hover{
+  opacity: 1;
+  cursor: pointer;
+}
