--- a/src/app/components/pages/tools/tools.component.css
+++ b/src/app/components/pages/tools/tools.component.css
@@ -1,3 +1,6 @@
+.tools{
+  background-color: #ccc;
+}
 .tools1{
     position: absolute;
     top: 80px;
@@ -100,4 +103,316 @@
 .top{
     width: 100%;
     height: 200px;
+}
+.heading{
+    width: 100%;
+    margin-top: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .line{
+    height: 5px;
+    width: 250px;
+    background-color: orangered;
+    margin-left: 10px;
+  }
+  .welcome{
+    width: 800px;
+    text-align: center;
+  }
+  .product{
+    height: 550px;
+    width: 100%;
+    /* background-color: #333; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+.card1{
+    height: 500px;
+    width: 300px;
+    border: 2px solid gray;
+    border-radius: 0;
+    display: flex;
+    flex-direction: column;
+    margin-left: 20px;
+  
+
+  /* Transition settings */
+  transition-property: border-color; 
+  transition-duration: 0.4s;        
+  transition-timing-function:inherit;
+  background-color: white;
+}
+.card1:hover{
+    
+        border-color: orangered; /* Change to blue on hover */
+      
+}
+.img{
+    height: 200px;
+    width: 295px;
+    /* background-color: aqua; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.head{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.list{
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: gray;
+}
+.list p:hover{
+    cursor: pointer;
+    color: black;
+}
+.but{
+    height: 50px;
+    width: 150px;
+    background-color: white;
+    border: none;
+    color: orangered;
+    margin-left: 73px;
+    margin-top: 20px;
+    border: 2px solid orangered;
+}
+.but:hover{
+  background-color: orangered;
+  color: white;   
+  
+  
+  transform: scale(1.1); /* Add a subtle scaling effect */
+transition: all 0.3s ease-in-out;
+}
+.items{
+    position: relative;
+    display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 10px;
+  height: auto; /* Remove fixed height for dynamic content */
+  margin-top: 30px;
+    width: 100%;
+   
+    
+}
+.item-c{
+    height: 450px;
+    width: 300px;
+    /* border: 1px solid black; */
+    margin-top: 30px;
+    margin-left: 30px;
+    background-color: white;
+
+}
+
+.price{
+    margin-top: 5px;
+    margin-left: 20px;
+}
+.star{
+    color: yellow;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+.info{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.info p{
+    margin: 0;
+}
+.icon-container{
+    position: absolute;
+    left: 20%;
+    bottom: 0;
+    transform: translateY(-50%);
+    opacity: 0;
+    transition: opacity 0.5s linear;
+    display: flex;
+    /* flex-direction: column; */
+    justify-content: space-evenly;
+    background-color: white;
+    height: 60px;
+    width: 150px;
+    border-radius: 45%;
+}
+.m-img{
+    position: relative;
+    cursor: pointer;
+    border: 1px solid gray;
+}
+.icon-container fa-icon{
+    margin-top: 20px;
+    /* margin-right: 5px; */
+    margin-left: 10px;
+}
+.icon-container fa-icon:hover{
+    color: orangered;
+}
+.m-img:hover .icon-container{
+    opacity: 1;
+} 
+
+.b-container {
+    position: relative;
+     height: 700px;
+     width: 100%;
+     
+  }
+  
+  .background-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("/assets/22.jpg"); /* Replace with your image path */
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    display: flex;
+     justify-content: center;
+     align-items: center;
+  }
+  .select{
+    display: flex;
+    flex-direction: column;
+  }
+  .select h2{
+    color: white;
+  }
+  .select select{
+    -webkit-appearance: none; 
+    -moz-appearance: none; 
+    appearance: none;
+    background-color: #F8F8F8;
+    margin-top: 25px;
+    font-size: 15px;
+    display: inline-block;
+    height: 50px; /* Optional height adjustment */
+  }
+  .select button{
+    height: 50px;
+    width: 350px;
+    background-color: orangered;
+    border: none;
+    color: white;
+    margin-top: 20px;
+    border: 2px solid orangered;
+  }
+  .select button:hover{
+    background-color: white;
+    color: orangered;   
+    
+    
+    transform: scale(1.1); /* Add a subtle scaling effect */
+  transition: all 0.3s ease-in-out;
+  }
+  .b-items{
+    height:500px;
+    width: 700px;
+    /* background-color: aliceblue; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .three{
+    width: 100%;
+    height: 700px;
+    display: flex;
+  }
+  .first{
+    height: 600px;
+    width: 350px;
+    margin-top: 50px;
+    margin-left: 50px;
+  }
+  .head{
+    margin-top: 10px;
+  }
+  .head h5{
+       margin-right: 40px;
+  }
+  .head fa-icon{
+    margin-left: 30px;
+  }
+  .body{
+    margin-top: 30px;
+  }
+  .pre{
+    display: flex;
+    flex-direction: column;
+  }
+  .pro{
+    display: flex;
+    margin-top: 10px;
+  }
+  .detail{
+    margin-top: 50px;
+    margin-left: 30px;
+  }
+  .toogle{
+    border: none;
+    background-color: #ccc;
+  }
+  .second{
+    height: 600px;
+    width: 850px;
+    margin-top: 50px;
+    margin-left: 50px;
+  }
+  .upper{
+    height: 350px;
+    width: 100%;
+    background-color: white;
+  }
+  .nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-top: 40px;
+  }
+  .nav a{
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
+  
+  }
+  .nav a:hover{
+    color: orangered;
+  }
+  .logo{
+    height: 120px;
+    width: 90%;
+    /* background-color: aqua; */
+    margin-left: 5%;
+    display: flex;
+    margin-top: 20px;
+    background-color: white;
+    border: 1px solid #ccc; 
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+.logo img{
+    margin-left: 120px;
+    opacity: 0.6;
+}
+.logo img:hover{
+    opacity: 1;
+    cursor: pointer;
 }
